[705] - fix hover on ios

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -4109,6 +4109,7 @@ a.td-wrap-link span {
 }
 .card {
     position: relative;
+    z-index: -1;
 }
 .card.hides .btn-container {
     height: 40px;
